# hist_data

./: README.md  pyproject.toml
src/hist_data/: __init__.py  configure.py  consistency.py  gold.py  ingest.py  pipeline.py
